--- a/Taş_Kağıt_Makas App/functions-04-game-user-choice/index.html
+++ b/Taş_Kağıt_Makas App/functions-04-game-user-choice/index.html
@@ -10,5 +10,6 @@
 <body>
   <button id="start-game-btn">Start Game!</button>
   <button id="roll-game-btn">Roll</button>
+  <button id="end-game-btn">End Game!</button>
 </body>
 </html>
